Fixed Toggle Option Visibility
Fixes #123

--- a/periodo/components/navbar.css
+++ b/periodo/components/navbar.css
@@ -1,74 +1,77 @@
+/** @format */
 
-.nav-img{
-    position: relative;
-    left: 2%;
+.nav-img {
+  position: relative;
+  left: 2%;
 }
-.Nav-bar{
-   width: 90%;
-   height: 150px;
+.Nav-bar {
+  width: 90%;
   padding: 0.5rem 1rem;
-    font-size: 20px;
-    font-weight: 700;
-} 
-.main-navbar{
-   width: 100%;
-   margin-right: 10px;
+  font-size: 20px;
+  font-weight: 700;
 }
-.Nav-bar:hover{
-   border-radius: 2rem;
-    box-shadow: 2px 2px 3px 3px cyan,
-                 2px 2px 5px 4px cyan;
-color: turquoise;
+.main-navbar {
+  width: 100%;
+  margin-right: 10px;
 }
-#nav-btn,.toggle{
-    display: none;
+.Nav-bar:hover {
+  border-radius: 2rem;
+  box-shadow: 2px 2px 3px 3px cyan, 2px 2px 5px 4px cyan;
+  color: turquoise;
 }
-
+#nav-btn,
+.toggle {
+  display: none;
+}
 
 /***********Responsive********/
 
-@media (min-width:400px) and (max-width:700px){
-    .main-navbar{
-        display: none;
-        visibility: hidden;
-    }
-      
-    .toggle{
-        display: block;
-        width: 30px;
-        height: 20px;
-        position: absolute;
-        top: 4%;
-        right: 2%;
-    }
-    .Nav-bar{
-        position: relative;
-        right: -60%;
-        text-align: center;
-        text-transform: capitalize;
-    }
-    .toggel-btn{
-        width: 30px;
-        min-height: 7px;
-        margin: 2px;
-        background-color: white;
+@media (min-width: 400px) and (max-width: 700px) {
+  .main-navbar {
+    display: none;
+    visibility: hidden;
+  }
 
-    }
+  .toggle {
+    display: block;
+    width: 30px;
+    height: 20px;
+    position: absolute;
+    top: 4%;
+    right: 2%;
+  }
+  .Nav-bar {
+    position: relative;
+    right: 20%;
+    z-index: 10;
+    text-align: center;
+    text-transform: capitalize;
+    padding: 20px;
+    margin-bottom: 3px;
+    width: 170px;
+    color: rgba(34, 19, 51, 1);
+    background-color: rgba(238, 164, 193, 0.993);
+  }
+  .toggel-btn {
+    width: 30px;
+    min-height: 7px;
+    margin: 2px;
+    background-color: white;
+  }
 
-    #nav-btn:checked+.main-navbar{
-        display: flex;
-        flex-direction: column;
-        visibility: visible;
-    }
-    .Nav-bar:hover{
-        color: red;
-    }
+  #nav-btn:checked + .main-navbar {
+    display: flex;
+    flex-direction: column;
+    visibility: visible;
+  }
+  .Nav-bar:hover {
+    color: rgb(241, 182, 217);
+    background-color: rgba(34, 19, 51, 1);
+  }
 }
 
-@media screen and (max-width:400px){
-
-    .Nav-bar{
-        right: -30%;
-    }
-
+@media screen and (max-width: 400px) {
+  .Nav-bar {
+    right: -30%;
+  }
 }
